# v-quansenwen_26_01_19_case1

./: Claude-Opus-4.5.txt  Claude-sonnet-4.5.txt  README.md  TUTORIAL.md  book.cleaned.txt  book.txt  final_prompt.txt  gpt-5.1-codex-max.txt  json_out.txt  oswe-large-m5a1s120-low.txt  pipeline.json  pipeline.yml  pipeline_book.yml  pyproject.toml  test_input.txt  test_json.json  test_out.txt  test_pipeline.yml  test_pipeline_correct.yml
src/flowtask/: cli.py  config.py  errors.py  executor.py  logging_utils.py  plugins.py
src/flowtask.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_config_smoke.py
